--- a/index.html
+++ b/index.html
@@ -10,19 +10,27 @@
 
 <div class="chat-container">
     <div class="chat-header">
-        <h2>Asistente Virtual</h2>
-        <p>Logística Rossetton</p>
+        <div class="profile-pic">
+            <img src="logo.png" alt="Logo">
+        </div>
+        <div class="header-info">
+            <span class="header-title">Logística Rossetton</span>
+            <div class="status-online">En línea</div>
+        </div>
     </div>
 
     <div id="chat-box" class="chat-box"></div>
 
     <div class="input-area">
-        <input type="text" id="user-input" placeholder="Escribe tu mensaje...">
-        <button onclick="sendMessage()">Enviar</button>
+        <label for="file-input" class="clip-icon">📎</label>
+        <input type="file" id="file-input" style="display: none;" accept="image/*">
+        
+        <input type="text" id="user-input" placeholder="Escribe un mensaje...">
+        
+        <button class="send-btn" onclick="sendMessage()">➤</button>
     </div>
 </div>
 
 <script src="script.js"></script>
 </body>
-
 </html>
