Change logo image source in index.html
Updated logo image source in the HTML file.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="chat-container">
     <div class="chat-header">
         <div class="profile-pic">
-            <img src="logo.png" alt="Logo">
+            <img src="logo-rossetton.png" alt="Logística Rossetton">
         </div>
         <div class="header-info">
             <span class="header-title">Logística Rossetton</span>
