Fix HTML formatting and ensure proper structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="chat-container">
     <div class="chat-header">
         <div class="profile-pic">
-            <img src="logo-rossetton.png" alt="Logística Rossetton">
+            <img src="logo-rossetton.png" alt="Logo">
         </div>
         <div class="header-info">
             <span class="header-title">Logística Rossetton</span>
@@ -24,9 +24,7 @@
     <div class="input-area">
         <label for="file-input" class="clip-icon">📎</label>
         <input type="file" id="file-input" style="display: none;" accept="image/*">
-        
         <input type="text" id="user-input" placeholder="Escribe un mensaje...">
-        
         <button class="send-btn" onclick="sendMessage()">➤</button>
     </div>
 </div>
