--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
     <div class="input-area">
         <label for="file-input" class="clip-icon">📎</label>
-        <input type="file" id="file-input" style="display: none;" accept="image/*">
+        <input type="file" id="file-input" style="display: none;" accept="image/*" onchange="subirFoto(this)">
+        
         <input type="text" id="user-input" placeholder="Escribe un mensaje...">
         <button class="send-btn" onclick="sendMessage()">➤</button>
     </div>
