Remove DOCTYPE and title from index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asistente Virtual - Logística Rossetton</title>
+    <title>Logística Rossetton</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,7 +24,6 @@
     <div class="input-area">
         <label for="file-input" class="clip-icon">📎</label>
         <input type="file" id="file-input" style="display: none;" accept="image/*" onchange="subirFoto(this)">
-        
         <input type="text" id="user-input" placeholder="Escribe un mensaje...">
         <button class="send-btn" onclick="sendMessage()">➤</button>
     </div>
