Update title and logo in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logística Rossetton</title>
+    <title>Asistente Logística Rossetton</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 <div class="chat-container">
     <div class="chat-header">
         <div class="profile-pic">
-            <img src="logo-rossetton.png" alt="Logo">
+            <img src="logo.png" alt="Logo Rossetton">
         </div>
         <div class="header-info">
             <span class="header-title">Logística Rossetton</span>
